--- a/css/main.css
+++ b/css/main.css
@@ -3515,6 +3515,6 @@ html.no-csstransitions .hero-content {
   display:none;
 }
 .p-button:hover:before {
-  content:"90045 33858";
+  content:"Download CV";
  
 }
