--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ body {
 }
 
 body {
-  background: #0b0a15;
+  background: #000000;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 1.8rem;
   font-style: normal;
@@ -568,7 +568,7 @@ form,
   left: 0;
   right: 0;
   bottom: 0;
-  background: #0b0a15;
+  background: #000000;
   z-index: 500;
   height: 100vh;
   width: 100%;
@@ -969,6 +969,7 @@ input[type="button"] {
   -moz-osx-font-smoothing: grayscale;
   background-color: #d3d3d3;
   border: 0.2rem solid #d3d3d3;
+  min-width:250px;
 }
 
 .btn:hover,
@@ -1699,7 +1700,7 @@ input::-moz-focus-inner {
 }
 
 .header-logo img {
-  width: 200px;
+  width: 125px;
   height: auto;
   vertical-align: bottom;
 }
@@ -2011,6 +2012,14 @@ input::-moz-focus-inner {
   width: 100%;
   height: 100vh;
   min-height: 82rem;
+  overflow: hidden;
+  background-color: transparent;
+  position: relative;
+}
+.s-hero-project {
+  width: 100%;
+  /* height: 100vh; */
+  min-height: 18rem;
   overflow: hidden;
   background-color: transparent;
   position: relative;
@@ -3270,7 +3279,7 @@ html.no-csstransitions .hero-content {
 .s-footer {
   padding-top: 24rem;
   padding-bottom: 8rem;
-  background-color: #0b0a15;
+  background-color: #000000;
   position: relative;
 }
 
@@ -3526,6 +3535,10 @@ html.no-csstransitions .hero-content {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.portfolio  {
+  
+  background:#fff;
+}
 .portfolio .portfolio-item {
   margin-bottom: 30px;
   background:#fff;
@@ -3543,15 +3556,16 @@ html.no-csstransitions .hero-content {
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
-  padding: 8px 16px 10px 16px;
+  padding: 16px 16px 16px 16px;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1;
   text-transform: uppercase;
   background: rgba(255, 255, 255, 0.1);
   margin: 0 3px 10px 3px;
   transition: all 0.3s ease-in-out;
-  border-radius: 4px;
+  border-radius: 0px;
+  min-width:200px
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
@@ -3568,7 +3582,7 @@ html.no-csstransitions .hero-content {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(0, 0, 0, 0.6);
+  /* background: rgba(0, 0, 0, 0.6); */
 }
 
 .portfolio .portfolio-wrap::before {
@@ -3582,6 +3596,7 @@ html.no-csstransitions .hero-content {
   transition: all ease-in-out 0.3s;
   z-index: 2;
   opacity: 0;
+  height:240px;
 }
 
 .portfolio .portfolio-wrap .portfolio-info {
@@ -3601,7 +3616,7 @@ html.no-csstransitions .hero-content {
 }
 
 .portfolio .portfolio-wrap .portfolio-info::before {
-  display: block;
+  display: none;
   content: "";
   width: 48px;
   height: 48px;
@@ -3615,7 +3630,7 @@ html.no-csstransitions .hero-content {
 }
 
 .portfolio .portfolio-wrap .portfolio-info::after {
-  display: block;
+  display: none;
   content: "";
   width: 48px;
   height: 48px;
