--- a/css/main.css
+++ b/css/main.css
@@ -1674,6 +1674,13 @@ input::-moz-focus-inner {
   height: 8.8rem;
   position: relative;
 }
+.header-nav-project{
+  margin-top:-20px !important;
+  padding-top:0px !important;
+}
+.header-logo-project{
+  top:15% !important;
+}
 
 /* -------------------------------------------------------------------
  * ## header logo
@@ -2019,7 +2026,7 @@ input::-moz-focus-inner {
 .s-hero-project {
   width: 100%;
   /* height: 100vh; */
-  min-height: 18rem;
+  min-height: 10rem;
   overflow: hidden;
   background-color: transparent;
   position: relative;
@@ -2203,6 +2210,9 @@ html.ss-loaded .hero-content {
 
 html.no-csstransitions .hero-content {
   opacity: 1;
+}
+.project-btn{
+  top:15% !important;
 }
 
 /* ------------------------------------------------------------------- 
@@ -3512,6 +3522,19 @@ html.no-csstransitions .hero-content {
   }
 }
 @media screen and (max-width:767px){
+  .hero-content {
+ 
+  margin-left:0%;
+}
+.header-logo img {
+    width: 100px;
+    height: auto;
+}
+
+.hero-content h1 {
+  font-size: 2.5rem;
+  
+}
   ul.header-nav {
   
   margin-left: 0px !important;
