--- a/css/main.css
+++ b/css/main.css
@@ -2488,6 +2488,7 @@ html.no-csstransitions .hero-content {
   bottom: 0;
   right: 0;
   left: calc(50% + 12vw);
+  margin-top:-40px;
 }
 #about{
   padding-top:40px;
